Implemented session management
